--- a/lotr-app/angular.json
+++ b/lotr-app/angular.json
@@ -28,6 +28,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -92,6 +93,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -123,6 +125,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "lotr-app"
+    }
+  },
+  "defaultProject": "lotr-app",
+  "cli": {
+    "analytics": "4cbe806c-c1e5-40ee-bd81-10ce93175ffd"
+  }
 }
